force-app/main/default/objects/C360_Customer_360_SObjects__c/C360_Customer_360_SObjects__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>C360:This is the Custom Setting for Customer 360 SObjects.  This setting allows for the automated 360 process to include objects in the rollup summaries that are setup in the &quot;customer 360 rollup mapping&quot; custom setting.

When new objects need to be added to the process, a record can be added to this custom setting, and the specific fields added to the &quot;customer 360 rollup mapping&quot; custom setting to start bringing in summarized data to the 360 object.</description>
    <label>Customer 360 SObjects</label>
</CustomObject>