force-app/main/default/objects/C360_Customer_360_SObjects__c/fields/C360_Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>C360_Is_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>C360:IS Processed is checked after processing.  This field is controlled through the automated batch process.  The default value is &quot;unchecked&quot;.  

When the batch runs, it checks the box of the object once all fields on the object have been processed.  

At the end of the batch cycle, all of the checkboxes are unchecked to prepare for the next cycle.</description>
    <inlineHelpText>C360:IS Processed is checked after processing by the scheduled batch &quot;Cust360AggregatorBatchService&quot;.</inlineHelpText>
    <label>Is Processed</label>
    <type>Checkbox</type>
</CustomField>