force-app/main/default/objects/C360_Customer_360_SObjects__c/fields/C360_Name__c.field-meta.xml
<CustomField>
    <fullName>C360_Name__c</fullName>
    <description>C360:Name Field - name of the object being included in the 360 batch process. 

Field mapping on the Customer 360 rollup mapping custom setting will specify specific fields for rollups.</description>
    <inlineHelpText>C360:Name Field - name of the object being included in the 360 batch process.</inlineHelpText>
    <label>Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>