force-app/main/default/objects/C360_Customer_360_SObjects__c/fields/C360_Order__c.field-meta.xml
<CustomField>
    <fullName>C360_Order__c</fullName>
    <description>C360:Order Field - processing order of the objects being included in the 360 batch process.</description>
    <inlineHelpText>C360:Order Field - processing order of the objects being included in the 360 batch process.</inlineHelpText>
    <label>Order</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>